[package]
name = "networker-rs"
version = "0.1.1"
authors = ["James Yacoube <jamesyacoube@yahoo.com>"]
edition = "2021"
description = "A Rust library providing TCP, UDP, and HTTP easier calls."
license = "MIT"
repository = "https://github.com/OrtheSnowJames/networker-rs"
homepage = "https://github.com/OrtheSnowJames/networker-rs"
keywords = ["networking", "tcp", "udp", "http"]
categories = ["network-programming", "web-programming"]
readme = "README.md"

[dependencies]
tungstenite = "0.26.1"
url = "2.5.4"
